# Factory-Automation

./: README.md  detectArUco.py  generateArUco.py
ros/aruco_tag/: CMakeLists.txt  package.xml
ros/aruco_tag/launch/: detect_aruco.launch
ros/aruco_tag/script/: aruco_tester.py  detectArUco.py  generateArUco.py  main.py  movement_test.py
ros/pathspec_YAML/: FactorySim.py  ROSmap.py  image_to_binary.py
