<?xml version="1.0"?>
<package format="2">
  <name>aruco_tag</name>
  <version>0.0.0</version>
  <description>The aruco_tag package</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <export></export>
</package>
